--- a/index.html
+++ b/index.html
@@ -358,16 +358,16 @@
                 </div>
 
                 <div class="contact-card">
-                    <h4>Ashish Shetty (Student Council Head)</h4>
+                    <h4>Manav Khimani</h4>
                     <div class="contact-content">
                         <div class="email-area">
                             <i class="bi bi-envelope-fill"></i>
-                            <a href="mailto:ashish.shetty@sakec.ac.in"
-                                style="color: #292f36;">ashish.shetty@sakec.ac.in</a>
+                            <a href="mailto:manav.khimani@sakec.ac.in"
+                                style="color: #292f36;">manav.khimani@sakec.ac.in</a>
                         </div>
                         <div class="phone-area">
                             <i class="bi bi-telephone-fill"></i>
-                            <p>+91 77150 22166</p>
+                            <p>+91 70218 63966</p>
                         </div>
                     </div>
 
