--- a/podcast/index.html
+++ b/podcast/index.html
@@ -398,76 +398,76 @@
   -->
 
   <footer id="contact">
-        <div class="footer-wrapper">
-            <h1>Get in touch with us</h1>
-            <div class="contact-wrapper">
-                <div class="contact-card">
-                    <h4>Prof. Milind Khairnar (Faculty Incharge)</h4>
+    <div class="footer-wrapper">
+        <h1>Get in touch with us</h1>
+        <div class="contact-wrapper">
+            <div class="contact-card">
+                <h4>Prof. Milind Khairnar (Faculty Incharge)</h4>
+                <div class="email-area">
+                    <i class="bi bi-envelope-fill"></i>
+                    <a href="mailto:milind.khairnar@sakec.ac.in"
+                        style="color: #292f36;">milind.khairnar@sakec.ac.in</a>
+                </div>
+                <div class="phone-area">
+                    <i class="bi bi-telephone-fill"></i>
+                    <p>+91 93223 19066</p>
+                </div>
+            </div>
+
+            <div class="contact-card">
+                <h4>Manav Khimani</h4>
+                <div class="contact-content">
                     <div class="email-area">
                         <i class="bi bi-envelope-fill"></i>
-                        <a href="mailto:milind.khairnar@sakec.ac.in"
-                            style="color: #292f36;">milind.khairnar@sakec.ac.in</a>
+                        <a href="mailto:manav.khimani@sakec.ac.in"
+                            style="color: #292f36;">manav.khimani@sakec.ac.in</a>
                     </div>
                     <div class="phone-area">
                         <i class="bi bi-telephone-fill"></i>
-                        <p>+91 93223 19066</p>
+                        <p>+91 70218 63966</p>
                     </div>
                 </div>
 
-                <div class="contact-card">
-                    <h4>Ashish Shetty (Student Council Head)</h4>
-                    <div class="contact-content">
-                        <div class="email-area">
-                            <i class="bi bi-envelope-fill"></i>
-                            <a href="mailto:ashish.shetty@sakec.ac.in"
-                                style="color: #292f36;">ashish.shetty@sakec.ac.in</a>
-                        </div>
-                        <div class="phone-area">
-                            <i class="bi bi-telephone-fill"></i>
-                            <p>+91 77150 22166</p>
-                        </div>
-                    </div>
+            </div>
 
+            <div class="contact-card">
+                <h4>For Other Queries Contact Us At :</h4>
+                <div class="email-area">
+                    <i class="bi bi-envelope-fill"></i>
+                    <a href="mailto:info@ecellsakec.in" style="color: #292f36;">info@ecellsakec.in</a>
                 </div>
-
-                <div class="contact-card">
-                    <h4>For Other Queries Contact Us At :</h4>
-                    <div class="email-area">
-                        <i class="bi bi-envelope-fill"></i>
-                        <a href="mailto:info@ecellsakec.in" style="color: #292f36;">info@ecellsakec.in</a>
-                    </div>
-                    <div class="phone-area">
-                        <!-- <i class="bi bi-telephone-fill"></i> -->
-                        <!-- <p>+91 93223 19066</p> -->
-                    </div>
+                <div class="phone-area">
+                    <!-- <i class="bi bi-telephone-fill"></i> -->
+                    <!-- <p>+91 93223 19066</p> -->
                 </div>
             </div>
         </div>
-        <div class="footer-ecell">
-            <div class="social-media">
-                <a class="social-media-cont" href="https://instagram.com/ecellsakec?igshid=YmMyMTA2M2Y" target='_blank'
-                    rel='noopener noreferrer'>
-                    <i class="bi bi-instagram "></i>
-                </a>
-                <a class="social-media-cont" href="https://m.facebook.com/100410025256433/" target='_blank'
-                    rel='noopener noreferrer'>
-                    <!-- <a href=""></a> -->
-                    <i class="bi bi-facebook"></i>
-                </a>
-                <a class="social-media-cont" href="https://youtube.com/channel/UCX5-UquwzBkftEEtLlJQyeQ" target='_blank'
-                    rel='noopener noreferrer'>
-                    <i class="bi bi-youtube"></i>
-                </a>
-                <a class="social-media-cont" href="https://www.linkedin.com/showcase/e-cell-sakec" target='_blank'
-                    rel='noopener noreferrer'>
-                    <i class="bi bi-linkedin"></i>
-                </a>
-            </div>
-            <h5>
-                entrepreneurship and innovation cell | SAKEC
-            </h5>
+    </div>
+    <div class="footer-ecell">
+        <div class="social-media">
+            <a class="social-media-cont" href="https://instagram.com/ecellsakec?igshid=YmMyMTA2M2Y" target='_blank'
+                rel='noopener noreferrer'>
+                <i class="bi bi-instagram "></i>
+            </a>
+            <a class="social-media-cont" href="https://m.facebook.com/100410025256433/" target='_blank'
+                rel='noopener noreferrer'>
+                <!-- <a href=""></a> -->
+                <i class="bi bi-facebook"></i>
+            </a>
+            <a class="social-media-cont" href="https://youtube.com/channel/UCX5-UquwzBkftEEtLlJQyeQ" target='_blank'
+                rel='noopener noreferrer'>
+                <i class="bi bi-youtube"></i>
+            </a>
+            <a class="social-media-cont" href="https://www.linkedin.com/showcase/e-cell-sakec" target='_blank'
+                rel='noopener noreferrer'>
+                <i class="bi bi-linkedin"></i>
+            </a>
         </div>
-    </footer>
+        <h5>
+            entrepreneurship and innovation cell | SAKEC
+        </h5>
+    </div>
+</footer>
     <script src="../common/js/nav.js"></script>
 </body>
 
