--- a/projectpillar/faq/index.html
+++ b/projectpillar/faq/index.html
@@ -205,7 +205,8 @@
                   <h4>Prof. Milind Khairnar (Faculty Incharge)</h4>
                   <div class="email-area">
                       <i class="bi bi-envelope-fill"></i>
-                      <a href="mailto:milind.khairnar@sakec.ac.in" style="color: #292f36;">milind.khairnar@sakec.ac.in</a>
+                      <a href="mailto:milind.khairnar@sakec.ac.in"
+                          style="color: #292f36;">milind.khairnar@sakec.ac.in</a>
                   </div>
                   <div class="phone-area">
                       <i class="bi bi-telephone-fill"></i>
@@ -214,15 +215,16 @@
               </div>
 
               <div class="contact-card">
-                  <h4>Ashish Shetty (Student Council head)</h4>
+                  <h4>Manav Khimani</h4>
                   <div class="contact-content">
                       <div class="email-area">
                           <i class="bi bi-envelope-fill"></i>
-                          <a href="mailto:ashish.shetty@sakec.ac.in" style="color: #292f36;">ashish.shetty@sakec.ac.in</a>
+                          <a href="mailto:manav.khimani@sakec.ac.in"
+                              style="color: #292f36;">manav.khimani@sakec.ac.in</a>
                       </div>
                       <div class="phone-area">
                           <i class="bi bi-telephone-fill"></i>
-                          <p>+91 77150 22166</p>
+                          <p>+91 70218 63966</p>
                       </div>
                   </div>
 
@@ -232,7 +234,7 @@
                   <h4>For Other Queries Contact Us At :</h4>
                   <div class="email-area">
                       <i class="bi bi-envelope-fill"></i>
-                      <a href="mailto:ecell@sakec.ac.in" style="color: #292f36;">info@ecellsakec.in</a>
+                      <a href="mailto:info@ecellsakec.in" style="color: #292f36;">info@ecellsakec.in</a>
                   </div>
                   <div class="phone-area">
                       <!-- <i class="bi bi-telephone-fill"></i> -->
@@ -243,22 +245,26 @@
       </div>
       <div class="footer-ecell">
           <div class="social-media">
-              <a class="social-media-cont" href="https://instagram.com/ecellsakec?igshid=YmMyMTA2M2Y">
+              <a class="social-media-cont" href="https://instagram.com/ecellsakec?igshid=YmMyMTA2M2Y" target='_blank'
+                  rel='noopener noreferrer'>
                   <i class="bi bi-instagram "></i>
               </a>
-              <a class="social-media-cont" href="https://m.facebook.com/100410025256433/">
+              <a class="social-media-cont" href="https://m.facebook.com/100410025256433/" target='_blank'
+                  rel='noopener noreferrer'>
                   <!-- <a href=""></a> -->
                   <i class="bi bi-facebook"></i>
               </a>
-              <a class="social-media-cont" href="https://youtube.com/channel/UCX5-UquwzBkftEEtLlJQyeQ">
+              <a class="social-media-cont" href="https://youtube.com/channel/UCX5-UquwzBkftEEtLlJQyeQ" target='_blank'
+                  rel='noopener noreferrer'>
                   <i class="bi bi-youtube"></i>
               </a>
-              <a class="social-media-cont" href="https://www.linkedin.com/showcase/e-cell-sakec">
+              <a class="social-media-cont" href="https://www.linkedin.com/showcase/e-cell-sakec" target='_blank'
+                  rel='noopener noreferrer'>
                   <i class="bi bi-linkedin"></i>
               </a>
           </div>
           <h5>
-              entreupreneurship and innovation cell | SAKEC
+              entrepreneurship and innovation cell | SAKEC
           </h5>
       </div>
   </footer>
