phone numbers removed from footer

--- a/index.html
+++ b/index.html
@@ -351,10 +351,10 @@
                         <a href="mailto:milind.khairnar@sakec.ac.in"
                             style="color: #292f36;">milind.khairnar@sakec.ac.in</a>
                     </div>
-                    <div class="phone-area">
+                    <!-- <div class="phone-area">
                         <i class="bi bi-telephone-fill"></i>
                         <p>+91 93223 19066</p>
-                    </div>
+                    </div> -->
                 </div>
 
                 <div class="contact-card">
@@ -365,10 +365,10 @@
                             <a href="mailto:manav.khimani@sakec.ac.in"
                                 style="color: #292f36;">manav.khimani@sakec.ac.in</a>
                         </div>
-                        <div class="phone-area">
+                        <!-- <div class="phone-area">
                             <i class="bi bi-telephone-fill"></i>
                             <p>+91 70218 63966</p>
-                        </div>
+                        </div> -->
                     </div>
 
                 </div>
