--- a/team/index.html
+++ b/team/index.html
@@ -817,10 +817,10 @@
                         <a href="mailto:milind.khairnar@sakec.ac.in"
                             style="color: #292f36;">milind.khairnar@sakec.ac.in</a>
                     </div>
-                    <div class="phone-area">
+                    <!-- <div class="phone-area">
                         <i class="bi bi-telephone-fill"></i>
                         <p>+91 93223 19066</p>
-                    </div>
+                    </div> -->
                 </div>
 
                 <div class="contact-card">
@@ -831,10 +831,10 @@
                             <a href="mailto:manav.khimani@sakec.ac.in"
                                 style="color: #292f36;">manav.khimani@sakec.ac.in</a>
                         </div>
-                        <div class="phone-area">
+                        <!-- <div class="phone-area">
                             <i class="bi bi-telephone-fill"></i>
                             <p>+91 70218 63966</p>
-                        </div>
+                        </div> -->
                     </div>
 
                 </div>
@@ -877,7 +877,6 @@
             </h5>
         </div>
     </footer>
-
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 </body>
