--- a/projectpillar/faq/index.html
+++ b/projectpillar/faq/index.html
@@ -208,10 +208,10 @@
                       <a href="mailto:milind.khairnar@sakec.ac.in"
                           style="color: #292f36;">milind.khairnar@sakec.ac.in</a>
                   </div>
-                  <div class="phone-area">
+                  <!-- <div class="phone-area">
                       <i class="bi bi-telephone-fill"></i>
                       <p>+91 93223 19066</p>
-                  </div>
+                  </div> -->
               </div>
 
               <div class="contact-card">
@@ -222,10 +222,10 @@
                           <a href="mailto:manav.khimani@sakec.ac.in"
                               style="color: #292f36;">manav.khimani@sakec.ac.in</a>
                       </div>
-                      <div class="phone-area">
+                      <!-- <div class="phone-area">
                           <i class="bi bi-telephone-fill"></i>
                           <p>+91 70218 63966</p>
-                      </div>
+                      </div> -->
                   </div>
 
               </div>
