--- a/events/index.html
+++ b/events/index.html
@@ -88,8 +88,7 @@
         <div class="FoodFiesta_info">
           <h1 class="FoodFiesta_title">Food Fiesta</h1>
           <p>
-            Food Fiesta, is a foodie and friendly event that offers you a platform to pitch and sell your food
-            products as a one-on-one business individual.
+            Food Fiesta, is a foodie and friendly event that offers you a platform to pitch and sell your food products as a one-on-one business individual. We aim to help students get acquainted with entrepreneurship and give them a glimpse of the whole of business all packed in a fun day.
           </p>
     
           <a href="../foodfiesta/index.html" class="FoodFiesta_cta" target="_blank">Read more</a>
