added student council head footer changes

--- a/foodfiesta/index.html
+++ b/foodfiesta/index.html
@@ -546,7 +546,7 @@
             </div>
 
             <div class="contact-card">
-                <h4>Manav Khimani</h4>
+                <h4>Manav Khimani (Student Council Head)</h4>
                 <div class="contact-content">
                     <div class="email-area">
                         <i class="bi bi-envelope-fill"></i>
