--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
             <li> <a href="#testimony">Testimony</a> </li>
             <li> <a href="#contactus">Contact Us </a> </li>
-            <!-- <li> <a href="./team/index.html">Our Team</a> </li> -->
+            <li> <a href="./team/index.html">Our Team</a> </li>
 
 
         </ul>
@@ -358,7 +358,7 @@
                 </div>
 
                 <div class="contact-card">
-                    <h4>Manav Khimani</h4>
+                    <h4>Manav Khimani (Student Council Head)</h4>
                     <div class="contact-content">
                         <div class="email-area">
                             <i class="bi bi-envelope-fill"></i>
