--- a/podcast/index.html
+++ b/podcast/index.html
@@ -51,10 +51,10 @@
     <ul class="links">
         <li> <a href="../index.html">Home </a> </li>
         <li> <a href="../events/index.html">Events </a> </li>
-        <li> <a href="#about">Episodes</a> </li>
-        <li> <a href="#objective">Newsletter</a> </li>
-        <li> <a href="#testimony">Testimony</a> </li>
-        <li> <a href="#contactus">Contact Us </a> </li>
+        <!-- <li> <a href="#about">Episodes</a> </li> -->
+        <!-- <li> <a href="#objective">Newsletter</a> </li> -->
+        <!-- <li> <a href="#testimony">Testimony</a> </li> -->
+        <!-- <li> <a href="#contactus">Contact Us </a> </li> -->
         <!-- <li> <a href="./team/index.html">Our Team</a> </li> -->
 
 
@@ -209,7 +209,7 @@
             </a>
           </li>
 
-          <li>
+          <!-- <li>
             <a href="#" class="podcast-card">
 
               <figure class="card-banner">
@@ -351,7 +351,7 @@
               </div>
 
             </a>
-          </li>
+          </li> -->
 
         </ul>
       </section>
@@ -364,7 +364,7 @@
         - #NEWSLETTER
       -->
 
-      <section class="newsletter">
+      <!-- <section class="newsletter">
         <div class="newsletter-card">
 
           <div class="card-content"  id="newsletter-text">
@@ -384,7 +384,7 @@
           </form>
 
         </div>
-      </section>
+      </section> -->
 
     </article>
   </main>
@@ -415,7 +415,7 @@
             </div>
 
             <div class="contact-card">
-                <h4>Manav Khimani</h4>
+                <h4>Manav Khimani (Student Council Head)</h4>
                 <div class="contact-content">
                     <div class="email-area">
                         <i class="bi bi-envelope-fill"></i>
