--- a/team/index.html
+++ b/team/index.html
@@ -33,13 +33,13 @@
         </div>
 
         <ul class="links">
-            <li> <a href="#home">Home </a> </li>
-            <li> <a href="#about">About Us </a> </li>
-            <li> <a href="#objective">Objectives</a> </li>
-            <li> <a href="./events/index.html">Events </a> </li>
-            <li> <a href="#testimony">Testimony</a> </li>
-            <li> <a href="#contactus">Contact Us </a> </li>
-            <li> <a href="./index.html">Our Team</a> </li>
+            <li> <a href="../index.html#home">Home </a> </li>
+            <li> <a href="#">Events </a> </li>
+            <li> <a href="../index.html#about">About Us </a> </li>
+            <li> <a href="../index.html#objective">Objectives</a> </li>
+            <li> <a href="../index.html#testimony">Testimony</a> </li>
+            <li> <a href="../index.html#contactus">Contact Us </a> </li>
+            <li> <a href="#">Our Team</a> </li>
 
 
         </ul>
@@ -75,9 +75,9 @@
     <!--team------------------------>
     <section id="team">
         <!--heading---->
-        <strong class="team-heading">Our Team</strong>
+        <!-- <strong class="team-heading">Our Team</strong> -->
 
-        <div class="faculty">
+        <!-- <div class="faculty">
             <div class="container my-2">
                 <h1 class="text-center my-2 my-md-4">Prof. Milind Khairnar (Faculty Incharge)</h1>
                 <div class="row">
@@ -97,7 +97,7 @@
                 </div>
             </div>
 
-        </div>
+        </div> -->
         <!--team-container---------->
         <div class="team-box-container">
             <strong class="team-head">Core Team</strong>
@@ -824,7 +824,7 @@
                 </div>
 
                 <div class="contact-card">
-                    <h4>Manav Khimani</h4>
+                    <h4>Manav Khimani (Student Council Head)</h4>
                     <div class="contact-content">
                         <div class="email-area">
                             <i class="bi bi-envelope-fill"></i>
