--- a/events/index.html
+++ b/events/index.html
@@ -10,10 +10,10 @@
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="../common/css/footer.css">
     <link rel="stylesheet" href="../common/css/nav.css">
     <link rel="stylesheet" href="../common/css/reset.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
@@ -37,7 +37,7 @@
             <li> <a href="../index.html#objective">Objectives</a> </li>
             <li> <a href="../index.html#testimony">Testimony</a> </li>
             <li> <a href="../index.html#contactus">Contact Us </a> </li>
-            <!-- <li> <a href="../team/index.html">Our Team</a> </li> -->
+            <li> <a href="../team/index.html">Our Team</a> </li>
 
 
 
@@ -180,7 +180,7 @@
                 </div>
 
                 <div class="contact-card">
-                    <h4>Manav Khimani</h4>
+                    <h4>Manav Khimani (Student Council Head)</h4>
                     <div class="contact-content">
                         <div class="email-area">
                             <i class="bi bi-envelope-fill"></i>
