--- a/faq/index.html
+++ b/faq/index.html
@@ -42,7 +42,7 @@
       <li> <a href="../index.html#objective">Objectives</a> </li>
       <li> <a href="../index.html#testimony">Testimony</a> </li>
       <li> <a href="../index.html#contactus">Contact Us </a> </li>
-      <!-- <li> <a href="../team/index.html">Our Team</a> </li> -->
+      <li> <a href="../team/index.html">Our Team</a> </li>
 
 
 
@@ -209,7 +209,7 @@
             </div>
 
             <div class="contact-card">
-                <h4>Manav Khimani</h4>
+                <h4>Manav Khimani (Student Council Head)</h4>
                 <div class="contact-content">
                     <div class="email-area">
                         <i class="bi bi-envelope-fill"></i>
