--- a/team/index.html
+++ b/team/index.html
@@ -34,7 +34,7 @@
 
         <ul class="links">
             <li> <a href="../index.html#home">Home </a> </li>
-            <li> <a href="#">Events </a> </li>
+            <li> <a href="../events/index.html">Events </a> </li>
             <li> <a href="../index.html#about">About Us </a> </li>
             <li> <a href="../index.html#objective">Objectives</a> </li>
             <li> <a href="../index.html#testimony">Testimony</a> </li>
