fixed team page images src

--- a/team/index.html
+++ b/team/index.html
@@ -430,7 +430,7 @@
                 </div>
                 <div class="mcard">
                     <div class="content">
-                        <img class="profile" width="100%" src="gallery/team/nikhil.png" alt="nikhil">
+                        <img class="profile" width="100%" src="./gallery/team/nikhil.png" alt="nikhil">
                         <h2>Nikhil Pangaonkar</h2>
                         <!-- <ul class="social-icon">
                             <li>
