--- a/team/index.html
+++ b/team/index.html
@@ -447,7 +447,7 @@
                 <div class="mcard">
                     <div class="content">
                         <img class="profile" width="100%" src="./gallery/Team/sandesh.webp" alt="sandesh">
-                        <h2>Sandesh</h2>
+                        <h2>Sandesh Lingayat</h2>
                         <!-- <ul class="social-icon">
                             <li>
                                 <a href="https://instagram.com/_sandylingayat_?igshid=YmMyMTA2M2Y=" target="_blank">
