--- a/team/index.html
+++ b/team/index.html
@@ -153,7 +153,7 @@
                 <div class="mcard">
                     <div class="content">
                         <img class="profile" width="100%" src="./gallery/Core Team/Sanjana.webp" alt="Sanjana">
-                        <h2>Sandesh Suresh</h2>
+                        <h2>Sanjana Suresh</h2>
                         <!-- <ul class="social-icon">
                             <li>
                                 <a href="https://instagram.com/prathamesh.pandeyy?igshid=YmMyMTA2M2Y=" target="_blank">
