removing chutiya people

--- a/team/index.html
+++ b/team/index.html
@@ -104,22 +104,6 @@
             <div class="core-members">
                 <div class="mcard">
                     <div class="content">
-                        <img class="profile" width="100%" src="./gallery/Core Team/Ashish.webp" alt="Ashish">
-                        <h2>Ashish Shetty</h2>
-                        <!-- <ul class="social-icon">
-                            <li>
-                                <a href="https://instagram.com/prathamesh.pandeyy?igshid=YmMyMTA2M2Y=" target="_blank">
-                                    <ion-icon name="logo-instagram"></ion-icon>
-                                </a>
-                            </li>
-                            <li><a href="https://www.linkedin.com/in/prathamesh-pandey-9b0a191aa" target="_blank">
-                                    <ion-icon name="logo-linkedin"></ion-icon>
-                                </a></li>
-                        </ul> -->
-                    </div>
-                </div>
-                <div class="mcard">
-                    <div class="content">
                         <img class="profile" width="100%" src="./gallery/Core Team/Manav.webp" alt="Manav">
                         <h2>Manav Khimani</h2>
                         <!-- <ul class="social-icon">
@@ -218,23 +202,6 @@
 
             <strong class="team-head">Team</strong>
             <div class="members">
-
-                <div class="mcard">
-                    <div class="content">
-                        <img class="profile" width="100%" src="./gallery/Team/prathamesh_p.webp" alt="prathamesh">
-                        <h2>Prathamesh Pandey</h2>
-                        <!-- <ul class="social-icon">
-                            <li>
-                                <a href="https://instagram.com/prathamesh.pandeyy?igshid=YmMyMTA2M2Y=" target="_blank">
-                                    <ion-icon name="logo-instagram"></ion-icon>
-                                </a>
-                            </li>
-                            <li><a href="https://www.linkedin.com/in/prathamesh-pandey-9b0a191aa" target="_blank">
-                                    <ion-icon name="logo-linkedin"></ion-icon>
-                                </a></li>
-                        </ul> -->
-                    </div>
-                </div>
                 <div class="mcard">
                     <div class="content">
                         <img class="profile" width="100%" src="./gallery/Team/Khushi.webp" alt="khushi">
@@ -269,22 +236,6 @@
                 </div>
                 <div class="mcard">
                     <div class="content">
-                        <img class="profile" width="100%" src="./gallery/Team/bhakti.webp" alt="">
-                        <h2>Bhakti Kharate</h2>
-                        <!-- <ul class="social-icon">
-                            <li>
-                                <a href="https://www.instagram.com/bhaktikharate24/" target="_blank">
-                                    <ion-icon name="logo-instagram"></ion-icon>
-                                </a>
-                            </li>
-                            <li><a href="http://linkedin.com/in/bhakti-kharate-827a101a2" target="_blank">
-                                    <ion-icon name="logo-linkedin"></ion-icon>
-                                </a></li>
-                        </ul> -->
-                    </div>
-                </div>
-                <div class="mcard">
-                    <div class="content">
                         <img class="profile" width="100%" src="./gallery/Team/dhara.webp" alt="ashish">
                         <h2>Dhara Shah</h2>
                         <!-- <ul class="social-icon">
@@ -294,22 +245,6 @@
                                 </a>
                             </li>
                             <li><a href="https://www.linkedin.com/in/dhara-shah-37b920215" target="_blank">
-                                    <ion-icon name="logo-linkedin"></ion-icon>
-                                </a></li>
-                        </ul> -->
-                    </div>
-                </div>
-                <div class="mcard">
-                    <div class="content">
-                        <img class="profile" width="100%" src="./gallery/Team/jay.webp" alt="ashish">
-                        <h2>Jay Shukla</h2>
-                        <!-- <ul class="social-icon">
-                            <li>
-                                <a href="https://www.instagram.com/jayshukla3667/" target="_blank">
-                                    <ion-icon name="logo-instagram"></ion-icon>
-                                </a>
-                            </li>
-                            <li><a href="https://www.linkedin.com/in/jay-shukla-a48bb41aa" target="_blank">
                                     <ion-icon name="logo-linkedin"></ion-icon>
                                 </a></li>
                         </ul> -->
@@ -334,7 +269,7 @@
                 <div class="mcard">
                     <div class="content">
                         <img class="profile" width="100%" src="./gallery/Team/varsha.webp" alt="varsha">
-                        <h2>Varsha</h2>
+                        <h2>Varsha Ekhande</h2>
                         <!-- <ul class="social-icon">
                             <li>
                                 <a href="" target="_blank">
@@ -365,22 +300,6 @@
                 </div>
                 <div class="mcard">
                     <div class="content">
-                        <img class="profile" width="100%" src="./gallery/Team/shraddha.webp" alt="shraddha">
-                        <h2>Shraddha Trivedi</h2>
-                        <!-- <ul class="social-icon">
-                            <li>
-                                <a href="https://www.instagram.com/shra_trivedi/" target="_blank">
-                                    <ion-icon name="logo-instagram"></ion-icon>
-                                </a>
-                            </li>
-                            <li><a href="https://www.linkedin.com/in/shraddha-t-0a059a1b9" target="_blank">
-                                    <ion-icon name="logo-linkedin"></ion-icon>
-                                </a></li>
-                        </ul> -->
-                    </div>
-                </div>
-                <div class="mcard">
-                    <div class="content">
                         <img class="profile" width="100%" src="./gallery/Team/adit.webp" alt="adit">
                         <h2>Adit Gandhi</h2>
                         <!-- <ul class="social-icon">
@@ -395,7 +314,6 @@
                         </ul> -->
                     </div>
                 </div>
-
                 <div class="mcard">
                     <div class="content">
                         <img class="profile" width="100%" src="./gallery/Team/kiran.webp" alt="kiran">
@@ -412,8 +330,6 @@
                         </ul> -->
                     </div>
                 </div>
-
-
                 <div class="mcard">
                     <div class="content">
                         <img class="profile" width="100%" src="./gallery/Team/pratham_k.webp" alt="pratham_k">
@@ -557,7 +473,6 @@
                         </ul> -->
                     </div>
                 </div>
-
                 <div class="mcard">
                     <div class="content">
                         <img class="profile" width="100%" src="./gallery/Team/aditi.webp" alt="aditi">
@@ -654,7 +569,6 @@
                         </ul> -->
                     </div>
                 </div>
-
                 <div class="mcard">
                     <div class="content">
                         <img class="profile" width="100%" src="./gallery/Team/harsh.webp" alt="harsh">
@@ -703,7 +617,6 @@
                         </ul> -->
                     </div>
                 </div>
-
                 <div class="mcard">
                     <div class="content">
                         <img class="profile" width="100%" src="./gallery/Team/nishit.webp" alt="nishit">
@@ -720,7 +633,6 @@
                         </ul> -->
                     </div>
                 </div>
-
                 <div class="mcard">
                     <div class="content">
                         <img class="profile" width="100%" src="./gallery/Team/prathamesh_v.webp" alt="prathamesh_v">
@@ -737,8 +649,6 @@
                         </ul> -->
                     </div>
                 </div>
-
-
                 <div class="mcard">
                     <div class="content">
                         <img class="profile" width="100%" src="./gallery/Team/rohit.webp" alt="rohit">
@@ -755,7 +665,6 @@
                         </ul> -->
                     </div>
                 </div>
-
                 <div class="mcard">
                     <div class="content">
                         <img class="profile" width="100%" src="./gallery/Team/shreedhar.webp" alt="shreedhar">
@@ -772,36 +681,7 @@
                         </ul> -->
                     </div>
                 </div>
-
-
-
-                <div class="mcard">
-                    <div class="content">
-                        <img class="profile" width="100%" src="./gallery/Team/vishal.webp" alt="vishal">
-                        <h2>Vishal</h2>
-                        <!-- <ul class="social-icon">
-                            <li>
-                                <a href="" target="_blank">
-                                    <ion-icon name="logo-instagram"></ion-icon>
-                                </a>
-                            </li>
-                            <li><a href="" target="_blank">
-                                    <ion-icon name="logo-linkedin"></ion-icon>
-                                </a></li>
-                        </ul> -->
-                    </div>
-                </div>
-
-
             </div>
-
-
-
-
-
-
-
-
         </div>
     </section>
 
