--- a/projectpillar/faq/index.html
+++ b/projectpillar/faq/index.html
@@ -92,7 +92,7 @@
             <h2 class="accordion-header" id="questionTwo">
               <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                 data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseThree">
-                Q2. How do I access the Project Pillars enrollment form?
+                Q2. How do I access the Project Pillar enrollment form?
               </button>
             </h2>
             <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="questionThree"
