fixed podcast page issues

--- a/team/index.html
+++ b/team/index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="../common/css/nav.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css">
     <link rel="stylesheet" href="css/style.css">
-    <title>Document</title>
+    <title>E-CELL | TEAM</title>
 </head>
 
 <body>
