event page minor css chnges

--- a/events/index.html
+++ b/events/index.html
@@ -64,7 +64,7 @@
       <section class="event2">
         <div class="sharktank">
           <div class="sharktank_img">
-            <img src="./img/pp_white_.webp" alt="sharktank img">
+            <img src="./img/project pillar logo final black with name.webp" alt="sharktank img">
           </div>
     
         <div class="sharktank_info">
