updated sakec logo

--- a/podcast/index.html
+++ b/podcast/index.html
@@ -39,10 +39,10 @@
     <input id="nav-toggle" type="checkbox">
     <div class="logo-wrapper">
         <a href="https://www.shahandanchor.com/home/" target='_blank' rel='noopener noreferrer'>
-            <img src="./assets/images/sakec_logo_BLACK.webp" alt="logo" class="logo  sakec-logo">
+            <img src="../common/img/sakec_logo_BLACK.webp" alt="logo" class="logo  sakec-logo">
         </a>
         <a href="../index.html">
-            <img src="./assets/images/e_cell_logo_BLACK.webp" alt="logo" class="logo">
+            <img src="../common/img/e_cell_logo_BLACK.webp" alt="logo" class="logo">
         </a>
 
 
