commented registration form

--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
         <div class="dots"></div>
       </div>
     </section>
-
+<!-- 
     <section class="registration" id="registration">
       <h1 class="reg-title" id="reg-title">For Students</h1>
       <div class="blog-card">
@@ -340,18 +340,6 @@
             width="100%"
             height="100%"
           />
-          <!--<ul class="details">
-                    <li class="author"><a href="#">John Doe</a></li>
-                    <li class="date">Aug. 24, 2015</li>
-                    <li class="tags">
-                        <ul>
-                            <li><a href="#">Learn</a></li>
-                            <li><a href="#">Code</a></li>
-                            <li><a href="#">HTML</a></li>
-                            <li><a href="#">CSS</a></li>
-                        </ul>
-                    </li>
-                </ul>-->
         </div>
         <div class="description">
           <h3>Excited to Join Us?</h3>
@@ -366,7 +354,7 @@
           </a>
         </div>
       </div>
-    </section>
+    </section> -->
     <!-- CONTACT FORM SECTION  -->
 
     <section class="contact-info" id="contactus">
