--- a/projectpillar/index.html
+++ b/projectpillar/index.html
@@ -305,7 +305,7 @@
               <div class="sponsor-card" data-card>
                 <h2 class="sponsor-title">food partner</h2>
                 <img
-                  src="./src/assets/icon/Smokey_Dough_wed.png"
+                  src="./src/assets/icon/Smokey_Dough_wed.webp"
                   alt="Rcf-Logo"
                   class="sponsor-img"
                 />
@@ -315,17 +315,17 @@
                 <h2 class="sponsor-title">sponsors</h2>
                 <div class="sponsor-img-container">
                   <img
-                    src="./src/assets/icon/Kano_web.png"
+                    src="./src/assets/icon/Kano_web.webp"
                     alt="Rcf-Logo"
                     class="sponsor-img"
                   />
                   <img
-                    src="./src/assets/icon/rcf-logo-B646B14094-seeklogo.com.png"
+                    src="./src/assets/icon/rcf-logo-B646B14094-seeklogo.com.webp"
                     alt="Rcf-Logo"
                     class="sponsor-img"
                   />
                   <img
-                    src="./src/assets/icon/chembur74_web.png"
+                    src="./src/assets/icon/chembur74_web.webp"
                     alt="Rcf-Logo"
                     class="sponsor-img"
                   />
@@ -336,17 +336,17 @@
                 <h2 class="sponsor-title">sponsors</h2>
                 <div class="sponsor-img-container">
                   <img
-                    src="./src/assets/icon/Contractor_web.png"
+                    src="./src/assets/icon/Contractor_web.webp"
                     alt="M/S JT Construction"
                     class="sponsor-img"
                   />
                   <img
-                    src="./src/assets/icon/Xhair_Web.png"
+                    src="./src/assets/icon/Xhair_Web.webp"
                     alt="X hair studio Logo"
                     class="sponsor-img"
                   />
                   <img
-                    src="./src/assets/icon/Desire_web.png"
+                    src="./src/assets/icon/Desire_web.webp"
                     alt="Desire Logo"
                     class="sponsor-img"
                   />
