provisional form closed and final pitch highlighted

--- a/projectpillar/index.html
+++ b/projectpillar/index.html
@@ -390,7 +390,7 @@
                 Each participant needs to fill out the provisional registration
                 form with primary details and essential documentation.
               </p>
-              <div class="button">
+              <!-- <div class="button">
                 <a
                   href="https://form.ecellsakec.in/"
                   target="_blank"
@@ -398,7 +398,7 @@
                   class="btn"
                   >Register Now</a
                 >
-              </div>
+              </div> -->
             </section>
           </div>
 
