--- a/projectpillar/index.html
+++ b/projectpillar/index.html
@@ -158,7 +158,7 @@
           <!-- Scroll down Animation -->
 
           <div class="scroll-down">
-            <a href="#timeline">Scroll Down</a>
+            <p>Scroll Down</p>
             <div class="mouse"></div>
           </div>
         </div>
