--- a/projectpillar/index.html
+++ b/projectpillar/index.html
@@ -298,7 +298,6 @@
             <i class="bi bi-arrow-left"></i>
           </div>
 
-          <!-- Co-Powered By -->
           <div class="display-area">
             <div class="sponsor-slider" data-slider>
               <!-- Food Partner -->
@@ -310,6 +309,14 @@
                   class="sponsor-img"
                 />
               </div>
+              <!-- <div class="sponsor-card" data-card>
+                <h2 class="sponsor-title">sponsors</h2>
+                <img
+                  src="./src/assets/icon/canara_bank.png"
+                  alt="Rcf-Logo"
+                  class="canara_bank"
+                />
+              </div> -->
               <!-- Sponsors -->
               <div class="sponsor-card" data-card>
                 <h2 class="sponsor-title">sponsors</h2>
@@ -325,8 +332,8 @@
                     class="sponsor-img"
                   />
                   <img
-                    src="./src/assets/icon/chembur74_web.webp"
-                    alt="Rcf-Logo"
+                    src="./src/assets/icon/Desire_web.webp"
+                    alt="Desire Logo"
                     class="sponsor-img"
                   />
                 </div>
@@ -334,7 +341,19 @@
               <!--Other Sponsors -->
               <div class="sponsor-card" data-card>
                 <h2 class="sponsor-title">sponsors</h2>
-                <div class="sponsor-img-container">
+                <div class="sponsor-img-container four-sponsor">
+                  <img
+                    src="./src/assets/icon/canara_bank.png"
+                    alt="canara bank Logo"
+                    class="canara_bank"
+                  />
+
+                  <img
+                    src="./src/assets/icon/chembur74_web.webp"
+                    alt="Rcf-Logo"
+                    class="sponsor-img"
+                  />
+
                   <img
                     src="./src/assets/icon/Contractor_web.webp"
                     alt="M/S JT Construction"
@@ -343,11 +362,6 @@
                   <img
                     src="./src/assets/icon/Xhair_Web.webp"
                     alt="X hair studio Logo"
-                    class="sponsor-img"
-                  />
-                  <img
-                    src="./src/assets/icon/Desire_web.webp"
-                    alt="Desire Logo"
                     class="sponsor-img"
                   />
                 </div>
