--- a/projectpillar/index.html
+++ b/projectpillar/index.html
@@ -94,11 +94,11 @@
           </div>
           <!-- Count Down to Event  -->
           <div class="counter-wrapper">
-            <h2><span>Starts In</span></h2>
-            <div class="container">
-              <div class="container-segment">
+            <h2><span>ONGOING</span></h2>
+            <!-- <div class="container">
+              <div class="container-segment"> -->
                 <!-- Days Card -->
-                <div class="segment">
+                <!-- <div class="segment">
                   <div class="flip-card" data-days-tens>
                     <div class="top">3</div>
                     <div class="bottom">3</div>
@@ -107,11 +107,11 @@
                     <div class="top">0</div>
                     <div class="bottom">0</div>
                   </div>
-                </div>
-                <div class="segment-title">Days</div>
-              </div>
+                </div> -->
+                <!-- <div class="segment-title">Days</div>
+              </div> -->
               <!-- Hours Card -->
-              <div class="container-segment">
+              <!-- <div class="container-segment">
                 <div class="segment">
                   <div class="flip-card" data-hours-tens>
                     <div class="top">2</div>
@@ -123,9 +123,9 @@
                   </div>
                 </div>
                 <div class="segment-title">hours</div>
-              </div>
+              </div> -->
               <!-- Minutes Card -->
-              <div class="container-segment">
+              <!-- <div class="container-segment">
                 <div class="segment">
                   <div class="flip-card" data-minutes-tens>
                     <div class="top">0</div>
@@ -137,9 +137,9 @@
                   </div>
                 </div>
                 <div class="segment-title">minutes</div>
-              </div>
+              </div> -->
               <!-- Seconds Card -->
-              <div class="container-segment">
+              <!-- <div class="container-segment">
                 <div class="segment">
                   <div class="flip-card" data-seconds-tens>
                     <div class="top">0</div>
@@ -152,7 +152,7 @@
                 </div>
                 <div class="segment-title">seconds</div>
               </div>
-            </div>
+            </div> -->
           </div>
 
           <!-- Scroll down Animation -->
