--- a/projectpillar/index.html
+++ b/projectpillar/index.html
@@ -94,7 +94,7 @@
           </div>
           <!-- Count Down to Event  -->
           <div class="counter-wrapper">
-            <h2><span>ONGOING</span></h2>
+            <h2>ONGOING <span>DAY 2</span></h2>
             <!-- <div class="container">
               <div class="container-segment"> -->
                 <!-- Days Card -->
