--- a/projectpillar/index.html
+++ b/projectpillar/index.html
@@ -97,8 +97,8 @@
             <h2><span>Sucessfully concluded</span></h2>
             <!-- <div class="container">
               <div class="container-segment"> -->
-                <!-- Days Card -->
-                <!-- <div class="segment">
+            <!-- Days Card -->
+            <!-- <div class="segment">
                   <div class="flip-card" data-days-tens>
                     <div class="top">3</div>
                     <div class="bottom">3</div>
@@ -108,10 +108,10 @@
                     <div class="bottom">0</div>
                   </div>
                 </div> -->
-                <!-- <div class="segment-title">Days</div>
+            <!-- <div class="segment-title">Days</div>
               </div> -->
-              <!-- Hours Card -->
-              <!-- <div class="container-segment">
+            <!-- Hours Card -->
+            <!-- <div class="container-segment">
                 <div class="segment">
                   <div class="flip-card" data-hours-tens>
                     <div class="top">2</div>
@@ -124,8 +124,8 @@
                 </div>
                 <div class="segment-title">hours</div>
               </div> -->
-              <!-- Minutes Card -->
-              <!-- <div class="container-segment">
+            <!-- Minutes Card -->
+            <!-- <div class="container-segment">
                 <div class="segment">
                   <div class="flip-card" data-minutes-tens>
                     <div class="top">0</div>
@@ -138,8 +138,8 @@
                 </div>
                 <div class="segment-title">minutes</div>
               </div> -->
-              <!-- Seconds Card -->
-              <!-- <div class="container-segment">
+            <!-- Seconds Card -->
+            <!-- <div class="container-segment">
                 <div class="segment">
                   <div class="flip-card" data-seconds-tens>
                     <div class="top">0</div>
@@ -273,7 +273,7 @@
       </section>
 
       <!--Sponors-->
-      <section>
+      <section id="sponsors">
         <!-- <h1>Sponsors</h1> -->
         <div class="pattern-left">
           <img
