css change teams i guess

--- a/team/index.html
+++ b/team/index.html
@@ -60,12 +60,12 @@
                 <img class="logo-ecell" src="./gallery/e_cell_logo.png" alt="logo">
             </a>
             <!-- <h1>E-CELL SAKEC</h1> -->
-            <div class="slide-description">E-Cell is a student-body organisation with motivated members that work
+            <div class="slide-description">
+              E-Cell is a student-body organisation with motivated members that work
                 around the clock to complete tasks with the utmost accuracy. The team is highly close-knit, and
                 individuals share their knowledge with one another to the benefit of everybody. The environment is fun,
-                engaging and productive. Get to know our team!!!!<div class="arrow-down">
-
-
+                engaging and productive. Get to know our team!!!!
+                <div class="arrow-down">
                     <div class="left"></div>
                     <div class="right"></div>
 
